# spectraguard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run_real_data_pipeline.py
.github/workflows/: ci.yml
benchmarks/: comparison_benchmark.py
examples/: 01_basic_analysis.py  02_uncertainty_analysis.py  03_batch_analysis.py  04_streaming_qc.py  05_weight_calibration.py
results/paper/figures/: figure_captions.md
spectraguard/: __init__.py  cli.py
src/: quality_analyzer.py
src/calibration/: __init__.py  instrument_transfer.py
src/metrics/: __init__.py  adaptive_baseline.py  baseline.py  confidence_score.py  config.py  fluorescence.py  hotspot_uniformity.py  peak_reproducibility.py  resolution.py  snr.py  uncertainty.py  weight_calibrator.py
src/metrics/core/: __init__.py  background_contamination.py
src/metrics/modality/ir/: __init__.py
src/metrics/modality/raman/: __init__.py
src/metrics/modality/sers/: __init__.py
src/pipeline/: eda.py  generate_figures.py  preprocessor.py  real_data_analysis.py  simulations.py  validation.py
src/streaming/: __init__.py  realtime_analyzer.py
src/utils/: synthetic_data.py
tests/: conftest.py  test_adaptive_baseline.py  test_instrument_transfer.py  test_integration_v2.py  test_metrics.py  test_quality_analyzer.py  test_streaming.py  test_uncertainty.py  test_weight_calibrator.py
